[tool.poetry]
name = "microscope-main"
version = "0.1.0"
description = ""
authors = ["Vladislav Perezyabov <v1234198@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytesseract = "^0.3.13"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
